k8s/pastebin-dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    generation: 1
    labels:
      app: pastebin
    name: pastebin
    namespace: valid-namespace
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: pastebin
      deploymentconfig: pastebin
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: pastebin
          deploymentconfig: pastebin
      spec:
        containers:
        - name: pastebin
          image: valid-docker-registry-with-pastebin-image:latest
          ports:
          - containerPort: 9999
            protocol: TCP
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
kind: List
