k8s/pastebin-svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: pastebin
    name: pastebin
    namespace: valid-namespace
  spec:
    ports:
    - name: port-1
      port: 80
      protocol: TCP
      targetPort: 9999
    selector:
      app: pastebin
      deploymentconfig: pastebin
    sessionAffinity: None
    type: ClusterIP
kind: List
