k8s/pastebin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pastebin
  name: pastebin
  namespace: valid-namespace
spec:
  port:
    targetPort: port-1
  to:
    kind: Service
    name: pastebin
